--- a/coffee-store/src/index.css
+++ b/coffee-store/src/index.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+/* https://i.ibb.co/670jYjdy/1.png
+https://i.ibb.co/d0WZJ8jM/2.png
+https://i.ibb.co/XrVKhjZT/3.png
+https://i.ibb.co/Kc8sPrqr/4.png
+https://i.ibb.co/G3Ps0zP5/5.png
+https://i.ibb.co/X1kBb1H/6.png */
